--- a/thesis/defs/acronyms.tex
+++ b/thesis/defs/acronyms.tex
@@ -8,7 +8,7 @@
 \newacronym{csr}{CSR}{control and status register}
 \newacronym{abi}{ABI}{application binary interface}
 \newacronym{aee}{AEE}{application execution environment}
-\newacronym{os}{OS}{operating system}
+\newacronym[plural=OSes,firstplural=operating systems (OSes)]{os}{OS}{operating system}
 \newacronym{sbi}{SBI}{supervisor binary interface}
 \newacronym{see}{SEE}{supervisor execution environment}
 \newacronym{rsa}{RSA}{Rivest–Shamir–Adleman}
