--- a/thesis/sections/conclusion.tex
+++ b/thesis/sections/conclusion.tex
@@ -39,7 +39,7 @@ Before a final summary of what has been achieved in this thesis will be given, w
     Since these properties are stable for a given architecture, there could be off the shelf tools verifying programs for high-level correctness removing the need to tailor verification efforts per system to be verified.
 \end{description}
 
-Finally, the main contribution of this thesis is a new approach the verifying \glspl{isa} by higher level information flow properties using a model checker.
+Finally, the main contribution of this thesis is a new approach the verifying \glspl{isa} by higher-level information flow properties using a model checker.
 This approach promises to take into account unbounded numbers of transitions, i.e. instructions, is non-redundant and architecture independent and results in either architectural changes to combat vulnerabilities or rules for e.g. \gls{os} or compiler engineers that are:
 \begin{itemize}
     \item practical and verifiable themselves,
