--- a/thesis/preface/abstract.tex
+++ b/thesis/preface/abstract.tex
@@ -1,8 +1,8 @@
 \chapter*{\centering Abstract}
 
-This thesis proposes an approach to formally verifying \glspl{isa} against higher level properties using the model checker nuXmv.
+This thesis proposes an approach to formally verifying \glspl{isa} against higher-level properties using the model checker nuXmv.
 This was first proposed by \cite{Reid17}.
-The model checker nuXmv is used to perform information flow tracking in the architecture, thus the higher level properties will be given by information flow properties.
+The model checker nuXmv is used to perform information flow tracking in the architecture, thus the higher-level properties will be given by information flow properties.
 The concepts behind information flow tracking stem from \cite{Ferraiuolo17} where \gls{ifc} was applied to \glspl{hdl}.
 
 The threat model that is assumed in this thesis is that user-mode is adversarial to machine-mode and completely compromised.
